quiz2/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: pdf-compressor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
